Part05/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: main
    image: knix008/curl:latest
    command: ["sleep", "9999999"]
