Part05/curl-with-ambassador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
spec:
  containers:
  - name: main
    image: knix008/curl:latest
    command: ["sleep", "9999999"]
  - name: ambassador
    image: knix008/kubectl-proxy:latest
