Part05/kubia-deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  minReadySeconds: 10
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: knix008/kubia:v3
        name: nodejs
  selector:
    matchLabels:
      app: kubia
